@@ -17,7 +17,7 @@
 
     <para><mediaobject>
         <imageobject>
-          <imagedata fileref="screenshots/OpenDlg1.gif" format="GIF" />
+          <imagedata fileref="screenshots/OpenDlg1.png" format="PNG" />
         </imageobject>
       </mediaobject></para>
 
