@@ -9,6 +9,7 @@ WinMerge 2.8.2
   Enlarge 'Discard All' button in Save confirmation dialog (#1947216)
   Tab icons at Filter dialog (#1926531)
   Add VB.net keywords to Basic highlighter (#1970912)
+  Manual: Use PNG files (#1988845)
   BugFix: Shortcuts given in command line were not expanded (#1942217)
   BugFix: Version Control filter did not match all VSS files (#1881186)
   BugFix: Fix command line paths in quotes ending with "\" (#1963523)
